<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleGrey">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">

        <TextView
            android:id="@+id/tv_unCurrency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_16"
            android:gravity="center"
            android:text="BTC/USDT"
            android:textColor="@color/darkBlueGrey"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_unPrice"
            android:layout_width="@dimen/dp_120"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@+id/tv_unCurrency"
            android:gravity="center_vertical"
            android:text="-0.00005"
            android:textColor="@color/topaz"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_unRiseAndFall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@+id/tv_unPrice"
            android:gravity="center_vertical"
            android:text="0.013244"
            android:textColor="@color/paleRed"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_unRiseAndFall1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_toEndOf="@+id/tv_unRiseAndFall"
            android:gravity="center_vertical"
            android:text="-0.00%"
            android:textColor="@color/paleRed"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_unTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dp_28"
            android:layout_toStartOf="@+id/back"
            android:gravity="center_vertical"
            android:text="2018/05/11 15:01:01"
            android:textColor="@color/darkBlueGrey"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:padding="@dimen/dp_20"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_close_black_24dp" />
    </RelativeLayout>

    <com.guoziwei.klinelib.chart.KLineView
        android:id="@+id/kline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title"
        android:layout_marginBottom="@dimen/dp_6"
        android:layout_toStartOf="@+id/ll_index" />

    <LinearLayout
        android:id="@+id/ll_index"
        android:layout_width="@dimen/dp_60"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/dp_6"
        android:layout_marginStart="@dimen/dp_6"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/bg_silver_border"
        android:orientation="vertical">

        <TextView
            style="@style/heightWrapContent.chartRight"
            android:text="@string/hostMap" />

        <TextView
            android:id="@+id/tv_sma"
            style="@style/heightWrapContent.chartRight.content"
            android:text="@string/sma" />

        <TextView
            android:id="@+id/tv_ema"
            style="@style/heightWrapContent.chartRight.content"
            android:text="@string/ema" />

        <TextView
            android:id="@+id/tv_boll"
            style="@style/heightWrapContent.chartRight.content"
            android:text="@string/boll" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/silver" />

        <TextView
            style="@style/heightWrapContent.chartRight"
            android:text="@string/deputyMap" />

        <TextView
            android:id="@+id/tv_vols"
            style="@style/heightWrapContent.chartRight.content"
            android:text="@string/vol" />

        <TextView
            android:id="@+id/tv_macd"
            style="@style/heightWrapContent.chartRight.content"
            android:text="@string/macd" />

        <TextView
            android:id="@+id/tv_kdj"
            style="@style/heightWrapContent.chartRight.content"
            android:text="@string/kdj" />
    </LinearLayout>

</RelativeLayout>